-Fixed Sign in and icon not showing on film blade

--- a/laravel-app/resources/css/app.css
+++ b/laravel-app/resources/css/app.css
@@ -456,7 +456,7 @@ body {
 }
 
 .films-page {
-    background-color: #d9d9d9;
+    background-color: rebeccapurple;
     padding: 35px 0 60px;
 }
 
